[tool.poetry]
name = "trakme-dbs"
version = "0.1.0"
description = ""
authors = ["fsgregorio <fsgregorio92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
streamlit = "^1.40.1"
pydantic = "^2.9.2"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
